--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.2"
+    "@astrojs/node": "^5.1.2",
+    "@astrojs/preact": "^2.1.0",
+    "@astrojs/tailwind": "^3.1.2",
+    "astro": "^2.3.4",
+    "preact": "^10.13.2",
+    "tailwindcss": "^3.3.2"
   }
 }
