--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host 0.0.0.0",
     "start": "node ./dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
@@ -14,6 +14,7 @@
     "@astrojs/preact": "^2.1.0",
     "@astrojs/tailwind": "^3.1.2",
     "astro": "^2.3.4",
+    "classnames": "^2.3.2",
     "preact": "^10.13.2",
     "tailwindcss": "^3.3.2"
   }
