--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "classnames": "^2.3.2",
     "preact": "^10.13.2",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/xml2js": "^0.4.11"
   }
 }
