--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "astro": "^2.3.4",
     "classnames": "^2.3.2",
     "preact": "^10.13.2",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "xml2js": "^0.5.0"
   },
   "devDependencies": {
     "@types/xml2js": "^0.4.11"
