--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@astrojs/tailwind": "^3.1.2",
     "astro": "^2.3.4",
     "classnames": "^2.3.2",
+    "fast-xml-parser": "^4.2.2",
     "preact": "^10.13.2",
     "tailwindcss": "^3.3.2",
-    "xml2js": "^0.5.0"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/xml2js": "^0.4.11"
