--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fast-xml-parser": "^4.2.2",
     "preact": "^10.13.2",
     "tailwindcss": "^3.3.2",
+    "xml2js": "^0.5.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
