--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^3.1.2",
     "astro": "^2.3.4",
     "classnames": "^2.3.2",
+    "crc-32": "^1.2.2",
     "fast-xml-parser": "^4.2.2",
     "preact": "^10.13.2",
     "tailwindcss": "^3.3.2",
