--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "crc-32": "^1.2.2",
     "fast-xml-parser": "^4.2.2",
+    "nav-keys": "^1.2.8",
     "preact": "^10.13.2",
     "tailwindcss": "^3.3.2",
     "xml2js": "^0.5.0",
