depends on questions working

--- a/questions.yaml
+++ b/questions.yaml
@@ -30,15 +30,23 @@ groups:
       - key: CA_CHECKBOX-GROUP_1684430004592
         label: Sección de cable ppal. unipolar
         large_options: false
+        depends_on:
+          CA_CHECKBOX-GROUP_1684413233368: CA_CCA_UNIPOLAR
       - key: CA_CHECKBOX-GROUP_1684430443116
         label: Cable ppal. bipolar (mm2)
         large_options: false
+        depends_on:
+          CA_CHECKBOX-GROUP_1684413233368: CA_BIPOLAR
       - key: CA_CHECKBOX-GROUP_1684430969197
         label: Cable ppal. tripolar (mm2)
         large_options: false
+        depends_on:
+          CA_CHECKBOX-GROUP_1684413233368: CA_TRIPOLAR
       - key: CA_CHECKBOX-GROUP_1684431095631
         label: Cable ppal. tripolar con neutro (mm2)
         large_options: false
+        depends_on:
+          CA_CHECKBOX-GROUP_1684413233368: CA_TRIPOLAR__NEUTRO
   - label: Conductor derivado
     type: group
     questions:
@@ -48,24 +56,38 @@ groups:
       - key: CA_CHECKBOX-GROUP_1684431809461
         label: Cable derivado unipolar (mm2)
         large_options: false
+        depends_on:
+          CA_CHECKBOX-GROUP_1684413233368: CA_CCA_UNIPOLAR
       - key: CA_CHECKBOX-GROUP_1684431991660
         label: Cable derivado bipolar (mm2)
         large_options: false
+        depends_on:
+          CA_CHECKBOX-GROUP_1684413233368: CA_BIPOLAR
       - key: CA_CHECKBOX-GROUP_1684432348609
         label: Cable derivado tripolar (mm2)
         large_options: false
+        depends_on:
+          CA_CHECKBOX-GROUP_1684413233368: CA_TRIPOLAR
       - key: CA_CHECKBOX-GROUP_1684432894891
         label: Cable derivado tetrapolar (mm2)
         large_options: false
+        depends_on:
+          CA_CHECKBOX-GROUP_1684413233368: CA_TRIPOLAR__NEUTRO
   - label: Últimas preguntas
     type: group
     questions:
       - key: CA_INTERFAZ__CORRIENTE_NOMINAL_DE_OPERACIN
         label: Interfaz / Corriente nominal de operación
         large_options: false
+        depends_on:
+          CA_TIPO_DE_ACCESORIO: Separable/Enchufable (norma IEC)
       - key: CA_TIPO_DE_SEPARABLE
         label: Tipo de separable
         large_options: false
+        depends_on:
+          CA_TIPO_DE_ACCESORIO: Separable/Enchufable (norma IEC)
       - key: CA_SISTEMA_DE_SUJECIN
         label: Sistema de sujeción
         large_options: false
+        depends_on:
+          CA_TIPO_DE_ACCESORIO: Separable/Enchufable (norma IEC)
