--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^2.3.4",
     "classnames": "^2.3.2",
     "crc-32": "^1.2.2",
+    "fast-html-parser": "^1.0.1",
     "fast-xml-parser": "^4.2.2",
     "nav-keys": "^1.2.8",
     "preact": "^10.13.2",
@@ -25,6 +26,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/fast-html-parser": "^1.0.2",
     "@types/xml2js": "^0.4.11"
   }
 }
