--- a/questions.yaml
+++ b/questions.yaml
@@ -3,48 +3,44 @@ groups:
     type: group
     questions:
       - key: CA_NIVEL_DE_TENSIN
-        icon: voltage.png
+        icon: voltage.svg
         label: Nivel de voltage
         description: Rango de tensión en el que opera el equipo
-        large_options: false
-        icons: 
+        icons:
           "30 a 36 kV": "36kv.png"
       - key: CA_TIPO_DE_ACCESORIO
         label: Tipo de accesorio
-        large_options: false
       - key: CA_TECNOLOGA_PRINCIPAL
         label: Tecnología principal
-        large_options: false
+        large_options: true
+        icons:
+          "Termocontraíble": "termocontraibles.png"
+          "Contraíble en frío": "contraibles_frio.png"
+          "Molde con resina reentrable": "silicona.png"
+          "Molde con resina no reentrable": "silicona.png"
       - key: CA_CHECKBOX-GROUP_1684438454148
         label: Uso Interior/Exterior
-        large_options: false
   - label: Conductor principal
     type: group
     questions:
       - key: CA_CHECKBOX-GROUP_1684413233368
         label: Número de fases del cable principal
-        large_options: false
       - key: CA_CHECKBOX-GROUP_1684413076075
         label: Tipo de Pantalla de la/s fase/s
-        large_options: false
       - key: CA_CHECKBOX-GROUP_1684430004592
         label: Sección de cable ppal. unipolar
-        large_options: false
         depends_on:
           CA_CHECKBOX-GROUP_1684413233368: CA_CCA_UNIPOLAR
       - key: CA_CHECKBOX-GROUP_1684430443116
         label: Cable ppal. bipolar (mm2)
-        large_options: false
         depends_on:
           CA_CHECKBOX-GROUP_1684413233368: CA_BIPOLAR
       - key: CA_CHECKBOX-GROUP_1684430969197
         label: Cable ppal. tripolar (mm2)
-        large_options: false
         depends_on:
           CA_CHECKBOX-GROUP_1684413233368: CA_TRIPOLAR
       - key: CA_CHECKBOX-GROUP_1684431095631
         label: Cable ppal. tripolar con neutro (mm2)
-        large_options: false
         depends_on:
           CA_CHECKBOX-GROUP_1684413233368: CA_TRIPOLAR__NEUTRO
   - label: Conductor derivado
@@ -52,25 +48,20 @@ groups:
     questions:
       - key: CA_CHECKBOX-GROUP_1684413315284
         label: Cantidad de fases del cable derivado
-        large_options: false
       - key: CA_CHECKBOX-GROUP_1684431809461
         label: Cable derivado unipolar (mm2)
-        large_options: false
         depends_on:
           CA_CHECKBOX-GROUP_1684413233368: CA_CCA_UNIPOLAR
       - key: CA_CHECKBOX-GROUP_1684431991660
         label: Cable derivado bipolar (mm2)
-        large_options: false
         depends_on:
           CA_CHECKBOX-GROUP_1684413233368: CA_BIPOLAR
       - key: CA_CHECKBOX-GROUP_1684432348609
         label: Cable derivado tripolar (mm2)
-        large_options: false
         depends_on:
           CA_CHECKBOX-GROUP_1684413233368: CA_TRIPOLAR
       - key: CA_CHECKBOX-GROUP_1684432894891
         label: Cable derivado tetrapolar (mm2)
-        large_options: false
         depends_on:
           CA_CHECKBOX-GROUP_1684413233368: CA_TRIPOLAR__NEUTRO
   - label: Últimas preguntas
@@ -78,16 +69,13 @@ groups:
     questions:
       - key: CA_INTERFAZ__CORRIENTE_NOMINAL_DE_OPERACIN
         label: Interfaz / Corriente nominal de operación
-        large_options: false
         depends_on:
           CA_TIPO_DE_ACCESORIO: Separable/Enchufable (norma IEC)
       - key: CA_TIPO_DE_SEPARABLE
         label: Tipo de separable
-        large_options: false
         depends_on:
           CA_TIPO_DE_ACCESORIO: Separable/Enchufable (norma IEC)
       - key: CA_SISTEMA_DE_SUJECIN
         label: Sistema de sujeción
-        large_options: false
         depends_on:
           CA_TIPO_DE_ACCESORIO: Separable/Enchufable (norma IEC)
