--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-	"name": "compet_guia_seleccion",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev --host 0.0.0.0",
-		"start": "node ./dist/server/entry.mjs",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"@astrojs/node": "^5.3.6",
-		"@astrojs/preact": "^2.2.2",
-		"@astrojs/tailwind": "^3.1.3",
-		"astro": "^3.3.3",
-		"classnames": "^2.3.2",
-		"fast-html-parser": "^1.0.1",
-		"fast-xml-parser": "^4.3.2",
-		"nav-keys": "^1.3.0",
-		"preact": "^10.18.1",
-		"tailwindcss": "^3.3.3",
-		"xml2js": "^0.5.0",
-		"yaml": "^2.3.3",
-		"zod": "^3.22.4"
-	},
-	"devDependencies": {
-		"@types/fast-html-parser": "^1.0.3",
-		"@types/xml2js": "^0.4.13",
-		"mssql": "^9.3.2"
-	}
+    "name": "compet_guia_seleccion",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev --host 0.0.0.0",
+        "start": "node ./dist/server/entry.mjs",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/preact": "^3.5.1",
+        "@astrojs/tailwind": "^5.1.0",
+        "astro": "^4.13.3",
+        "classnames": "^2.5.1",
+        "fast-html-parser": "^1.0.1",
+        "fast-xml-parser": "^4.3.2",
+        "nav-keys": "^1.3.0",
+        "preact": "^10.23.1",
+        "tailwindcss": "^3.4.9",
+        "xml2js": "^0.6.2",
+        "yaml": "^2.5.0",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "1.8.3",
+        "@types/fast-html-parser": "^1.0.3",
+        "@types/xml2js": "^0.4.14",
+        "mssql": "11.0.1"
+    }
 }
