arreglar fetcheo de datos

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -13,5 +13,12 @@
             "semicolons": "asNeeded",
             "quoteStyle": "single"
         }
+    },
+    "linter": {
+        "rules": {
+            "style": {
+                "noNonNullAssertion": "off"
+            }
+        }
     }
 }
